--- a/hme-rook/filesystem.yaml
+++ b/hme-rook/filesystem.yaml
@@ -26,7 +26,7 @@ spec:
       #target_size_ratio: ".5"
   # The list of data pool specs. Can use replication or erasure coding.
   dataPools:
-    - name: replicated
+    - name: hme-cephfs-replicated
       failureDomain: host
       replicated:
         size: 3
