--- a/traefik/traefik-ingressroutes.yaml
+++ b/traefik/traefik-ingressroutes.yaml
@@ -1,18 +1,3 @@
-# apiVersion: traefik.io/v1alpha1
-# kind: IngressRoute
-# metadata:
-#   name: hello-world
-#   namespace: hme
-# spec:
-#   entryPoints:
-#     - websecure
-#   routes:
-#   - match: Host(`hello-world.yawmzero.io`)
-#     kind: Rule
-#     services:
-#     - name: whoami
-#       port: 80
-# ---
 apiVersion: traefik.io/v1alpha1
 kind: IngressRoute
 metadata:
@@ -21,7 +6,7 @@ spec:
   entryPoints:
     - websecure
   routes:
-    - match: Host(`traefik.yawmzero.io`) && (PathPrefix(`/dashboard`) || PathPrefix(`/api`))
+    - match: Host(`traefik.yawmzero.io`)
       kind: Rule
       services:
         - name: api@internal
